@@ -116,6 +116,7 @@ esac
 AC_PROG_CC
 AC_PROG_GCC_TRADITIONAL
 AC_PROG_INSTALL
+AC_PATH_PROG(LN, ln, ln)
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AC_PROG_LIBTOOL
