@@ -90,6 +90,7 @@ rm -rf "$RPM_BUILD_ROOT"
 %{bindir}/ntfs[^m][^o]*
 %{sbindir}/*
 %{mandir}/man8/mkntfs.8*
+%{mandir}/man8/mkfs.ntfs.8*
 %{mandir}/man8/ntfs[^m][^o]*.8*
 %{_libdir}/libntfs.*so*
 
@@ -111,6 +112,9 @@ rm -rf "$RPM_BUILD_ROOT"
 %{_libdir}/gnome-vfs-2.0/modules/libntfs-gnomevfs.*a*
 
 %changelog
+* Mon Aug 15 2005 Szabolcs Szakacsits <szaka@sienet.hu>
+- Add mkfs.ntfs.
+
 * Mon Jul 18 2005 Anton Altaparmakov <aia21@cantab.net>
 - Add ntfsmount fuse module in separate rpm ntfsprogs-fuse.
 
