@@ -33,6 +33,7 @@ xx/xx/2005 - 1.12.0-WIP
 	  ntfs_mft_record_alloc.  (Yura)
 	- Make ntfsmount use new APIs for file and directory creation/deletion.
 	  Implement utime operation.  (Yura)
+	- Hard link mkfs.ntfs and mkfs.ntfs.8 with mkntfs and mkntfs.8  (Szaka).
 
 08/08/2005 - 1.11.2 - ntfsdecrypt now works and lots of fixes and improvements.
 
